--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.example.android.sssh">
 
-    <meta-data
-        android:name="com.google.android.geo.API_KEY"
-        android:value="YOUR_API_KEY"/>
+
 
     <application
         android:allowBackup="true"
@@ -13,6 +11,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyA3N20MuVRvDBJh82JkvT9J6cmdBbsLiF8"/>
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -22,6 +25,11 @@
         </activity>
         <activity android:name=".SettingsActivity">
         </activity>
+
+        <provider
+            android:authorities="com.example.android.sssh"
+            android:name="com.example.android.sssh.provider.PlaceContentProvider"
+            android:exported="false"/>
     </application>
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/> <!-- Permission for the location-->
